--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -8,3 +8,16 @@
   background-color: #f9f9f9;
   border-top: 1px solid black;
 }
+#phosphat_about {
+  padding: 3%;
+}
+#paper-credit {
+  font-size: .8em;
+}
+h4 {
+  line-height: 130%;
+}
+
+#phos_logo {
+  border-radius: 0% 25%;
+}
