--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,19 +1,27 @@
 #phosphat_protein-seq-cont {
   display: none;
 }
+
 #phosphat_protein-seq {
-  width: 75%;
-  overflow-x: scroll;
-  padding: 5px;
   background-color: #f9f9f9;
-  border-top: 1px solid black;
+  border: 1px solid rgb(183, 183, 183);
+  font-family: "Courier New", Courier, monospace;
+  padding: 5px;
+  height: 8em;
+  max-width: 44em;
+	overflow-y:scroll;
+
 }
+
 #phosphat_about {
-  padding: 3%;
+  padding-top: 3%;
+  padding-left: 1%;
 }
+
 #paper-credit {
   font-size: .8em;
 }
+
 h4 {
   line-height: 130%;
 }
